--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
-<head><title>My Resume</title></head>
+<head>
+    <title>My Resume</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- icon link -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- Font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+</head>
 <body>
     <header>
-        <div id="introduction">
-            <div class="photo"><img style="border-radius: 50%;" alt="my-photo" src="images/me.jpg" height="150" width="150" ></div>
-            <h2>Bhavesh Padave</h2>
-            <p>Programmer</p>
+        <div id="introduction" class="introduction">
+            <div class="container">
+                <div class="photo"><img style="border-radius: 50%;" alt="my-photo" src="images/me.jpg" height="150" width="150" ></div>
+                <h2>Hi, I am Bhavesh Padave</h2>
+                <p>a p<u>ro</u>grammer</p>
+            </div>   
         </div>
     </header>
     <main>
-        <div>
+        <div class="container">
             <h2>Get in touch</h2>
             <div >
                 <h4>Contact no: </h4>
@@ -22,8 +33,10 @@
         </div>        
     </main>
     <footer>
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contact me</a>
-        <p>Copyright © 2023 Bhavesh Padave. All rights reserved</p>
+        <div class="container footer">
+            <a href="index.html">Home</a>
+            <a href="contact.html">Contact me</a>
+            <p>Copyright © 2023 Bhavesh Padave. All rights reserved</p>
+        </div>
     </footer>
 </body>
