--- a/index.html
+++ b/index.html
@@ -1,51 +1,123 @@
 <!DOCTYPE html>
-<head><title>My Resume</title></head>
+<head>
+    <title>My Resume</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- icon link -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- Font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+</head>
 <body>
     <header>
-        <div id="introduction">
-            <div class="photo"><img style="border-radius: 50%;" alt="my-photo" src="images/me.jpg" height="150" width="150" ></div>
-            <h2>Bhavesh Padave</h2>
-            <p>Programmer</p>
+        <div id="introduction" class="introduction">
+            <div class="container">
+                <div class="photo"><img style="border-radius: 50%;" alt="my-photo" src="images/me.jpg" height="150" width="150" ></div>
+                <h2>Hi, I am Bhavesh Padave</h2>
+                <p>a p<u>ro</u>grammer</p>
+                <div id="summary">
+                    <h3 hidden>Summary</h3>
+                    <p>An IT professional with hands-on experience of various technologies. I have thorough knowledge of tools used.</p>
+                </div>
+            </div>   
         </div>
     </header>
     <main>
-        <div id="summary">
-            <h4 hidden>Summary</h4>
-            <p>An IT professional with hands-on experience of various technologies. I have thorough knowledge of tools used.</p>
+        <div id="skills" class="container">
+            <h3>Skills</h3>
+            <div class="flex">
+                <div class="flex-card">HTML</br>
+                    <span class="material-symbols-outlined">star  star star star
+                    </span>
+                </div>
+                <div class="flex-card">CSS</br>
+                    <span class="material-symbols-outlined">star  star star
+                    </span>
+                </div>
+                <div class="flex-card">JAVASCRIPT</br>
+                    <span class="material-symbols-outlined">star  star star
+                    </span>
+                </div>
+                <div class="flex-card">MySQL</br>
+                    <span class="material-symbols-outlined">star  star star 
+                    </span>
+                </div>
+                <div class="flex-card">PHP</br>
+                    <span class="material-symbols-outlined">star  star star star
+                    </span>
+                </div>
+                <div class="flex-card">Shell Scripting  </br>
+                    <span class="material-symbols-outlined">star  star star star
+                    </span>
+                </div>
+            </div>
         </div>
-        <div id="skills">
-            <h4>Skills</h4>
-            <ul>
-                <li>HTML 80%</li>
-                <li>CSS 60%</li>
-                <li>JAVASCRIPT 55%</li>
-                <li>MySQL 45%</li>
-                <li>PHP 60%</li>
-                <li>Shell Scripting 30%</li>
-            </ul>
-        </div>
-        <div id="work-experience">
-            <h4>Work Experience</h4>
-            <ul>
-                <li><b>Senior Software Engineer</b><br>KGL
-                <p>-Worked on Codebase which potentially being used as dynamic application</p>
-                </li>
-                <li><b>Drupal Developer</b><br>NSEiT
-                <p>Sample text</p></li>
-                <li><b>Data Analyst</b><br>Daamatics
-                <p>Sample text</p></li>
-            </ul> 
+        <div id="work-experience" class="experience">
+            <div class="container">
+                <h3>Work Experience</h3>
+                <div class="card">
+                    <h4>Senior Software Engineer</h4>KGL
+                    <p>-Worked on Codebase which potentially being used as dynamic application</p>
+                </div>
+                <div class="card">
+                    <h4>Drupal Developer</h4>NSEiT
+                    <ul>
+                        <li>Involved in NSE website Revamp project. Worked closely
+                            with ADM team on AWS to set up the new website. Tested
+                            newly developed website modules. Worked on Postman
+                            for API testing</li>
+                        <li>Involved in manual testing of various application and
+                            forms on the website</li>    
+                        <li>Worked productively with Business/ Product Team to
+                            understand requirements and business specifications
+                            around Portfolio Management, Analytics and Risk. Used
+                            tools like CollabNet, ServiceNow.</li>
+                        <li>Integrated the Drupal 8 with new website.</li>
+                        <li>Used top 20 core modules including contrib and custom
+                            modules of the Drupal</li>
+                        <li>Created custom workflow and implemented TFA to give
+                            the access to business users</li>
+                        <li>Interacted with 30+ departments and 200+ people within
+                            the organization to demonstrate application for content
+                            authorization.</li>
+                        <li>Migrated Drupal 8 to 9</li>
+                        <li>Involved in SEO for NSE website, from searching
+                            keywords to integration of it.</li>
+                        <li>Involved in NSE website Accessibility project to make
+                            website accessible for visually impaired people.</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <h4>Data Analyst</h4>Daamatics
+                    <ul>
+                        <li>Project: Salesforce (MEA, APAC)
+                            Description: Data analysis, Data filtration as per clients
+                            requirement</li>
+                        <li>Responsibility:
+                            Quickly learned new skills and applied them to daily tasks,
+                            improving efficiency and productivity
+                            Mentored interns and junior engineers to quickly adapt to
+                            the process and get on-boarded on to the project.</li>
+                        <li>Tool: Salesforce</li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div id="education"></div>
-        <h4>Qualification</h4>
-        <ul>
-            <li><b>Bachelor of Science (Computer Science)</b><br>Mumbai University</li>
-        </ul>
+        <div class="container">
+            <h3>Qualification</h3>
+            <div class="card">
+                <h4>Bachelor of Science (Computer Science)</h4><br>Mumbai University
+            </div>
+        </div>
     </main>
     <footer>
-        <a href="index.html">Home</a>
+        <div class="container footer">
+            <a href="index.html">Home</a>
         <a href="contact.html">Contact me</a>
         <p>Copyright © 2023 Bhavesh Padave. All rights reserved</p>
+        </div>
     </footer>
 </body>
 </html>
