Add favicon and links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
-    <title>My Resume</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bhavesh  Padave</title>
+    <link rel="icon" type="image/svg" href="images/favicon.svg">
     <link rel="stylesheet" href="style.css">
     <!-- icon link -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -19,6 +22,17 @@
                 <div id="summary">
                     <h3 hidden>Summary</h3>
                     <p>An IT professional with hands-on experience of various technologies. I have thorough knowledge of tools used.</p>
+                </div>
+                <div id="links">
+                    <h3 hidden>Links</h3>
+                    <span class="material-symbols-outlined link-icon">link </span>
+                    <a href="https://www.linkedin.com/in/bhavesh-padave/" target="_blank">
+                        LinkedIn
+                    </a>
+                    <span class="material-symbols-outlined link-icon">link </span>
+                    <a href="https://github.com/bhaveshpadave" target="_blank">
+                        GitHub
+                    </a>
                 </div>
             </div>   
         </div>
@@ -45,6 +59,10 @@
                 </div>
                 <div class="flex-card">PHP</br>
                     <span class="material-symbols-outlined">star  star star star
+                    </span>
+                </div>
+                <div class="flex-card">JAVA  </br>
+                    <span class="material-symbols-outlined">star  star
                     </span>
                 </div>
                 <div class="flex-card">Shell Scripting  </br>
