Update minor changes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
         <div id="skills" class="container">
             <h3>Skills</h3>
             <div class="flex">
+                <div class="flex-card">JAVASCRIPT</br>
+                    <span class="material-symbols-outlined">star  star star
+                    </span>
+                </div>
+                <div class="flex-card">JAVA  </br>
+                    <span class="material-symbols-outlined">star  star
+                    </span>
+                </div>
+                <div class="flex-card">SQL</br>
+                    <span class="material-symbols-outlined">star  star star 
+                    </span>
+                </div>
                 <div class="flex-card">HTML</br>
                     <span class="material-symbols-outlined">star  star star star
                     </span>
@@ -49,20 +61,8 @@
                     <span class="material-symbols-outlined">star  star star
                     </span>
                 </div>
-                <div class="flex-card">JAVASCRIPT</br>
-                    <span class="material-symbols-outlined">star  star star
-                    </span>
-                </div>
-                <div class="flex-card">MySQL</br>
-                    <span class="material-symbols-outlined">star  star star 
-                    </span>
-                </div>
                 <div class="flex-card">PHP</br>
                     <span class="material-symbols-outlined">star  star star star
-                    </span>
-                </div>
-                <div class="flex-card">JAVA  </br>
-                    <span class="material-symbols-outlined">star  star
                     </span>
                 </div>
                 <div class="flex-card">Shell Scripting  </br>
@@ -76,10 +76,23 @@
                 <h3>Work Experience</h3>
                 <div class="card">
                     <h4>Senior Software Engineer</h4>KGL
-                    <p>-Worked on Codebase which potentially being used as dynamic application</p>
+                    <small>(11 mos)</small>
+                    <ul>
+                        <li>
+                            Involved in “Connect” migration project. It is a Drupal 
+                            based codebase run on PHP symphony framework TWIG 
+                            template engine.
+                        </li>
+                        <li>
+                            Worked closely with US client and remote team as part of 
+                            this upgradation/ migration of the codebase. Developed 
+                            and tested website modules
+                        </li>
+                    </ul>
                 </div>
                 <div class="card">
                     <h4>Drupal Developer</h4>NSEiT
+                    <small>(4 yrs)</small>
                     <ul>
                         <li>Involved in NSE website Revamp project. Worked closely
                             with ADM team on AWS to set up the new website. Tested
@@ -108,6 +121,7 @@
                 </div>
                 <div class="card">
                     <h4>Data Analyst</h4>Daamatics
+                    <small>(1 yr 3 mos)</small>
                     <ul>
                         <li>Project: Salesforce (MEA, APAC)
                             Description: Data analysis, Data filtration as per clients
